Bug 1342854 Run a limited number of timer callbacks in the same event loop runnable. r=smaug a=jcristau